# sls-python3-poetry-template

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  samconfig.toml  template.yaml
scripts/: make-deps.sh
