[tool.poetry]
name = "sls-private-email-relay"
version = "0.1.0"
description = ""
authors = ["Diego Arce <diego@arce.cr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.1.1"
aws-lambda-powertools = {extras = ["all"], version = "^2.36.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
