[tool.poetry]
name = "sls-python3-poetry-template"
version = "0.1.0"
description = ""
authors = ["Diego Arce <diego@arce.cr>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest = "^8.1.1"
aws-lambda-powertools = {extras = ["all"], version = "^2.36.0"}
black = "^24.3.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
